style.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    background-color: #074270;
    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
    /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
}

nav {
    display: flex;
    width: 100%;
    background-color:#743B00 ;
    justify-content: space-around;
    align-items: center;
    height: 5vh;
}

nav a {
    color: white;
    padding: 8px;
    display: block;
    border: white solid 2px;
}

a:hover {
    background-color: rgb(0, 172, 230);
}
a:link {
    text-decoration: none;
}

.home-hero {
    background-color: grey;
    display: flex;
    justify-content: center;
    flex-wrap:wrap;
    align-content: center;
    height: 40vh;
}

.divider {
    display: block;
    background-color: white;
    height: 2px;
    width: 95%;
    display: flex;
    margin: auto;
    justify-content: center;
    margin: 2% auto;
}

.home-section1,
.home-section2 {
    margin: 0;
}


.home-content1 {
    display: flex;
    flex-direction: row;
    width: 100%;
    margin: 0;
    padding-left: 2.5%;
    padding-right: 2.5%;
}

.home-content2 {
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-start;
    width: 100%;
    margin: 0;
    padding-left: 2.5%;
    padding-right: 2.5%;
}

.home-content2-img {
    display: flex;
    flex-direction: row;
    width: 100%;
    margin: 0;
    padding-left: 2.5%;
    padding-right: 2.5%;
}

.home-content1-writing {
    width: 55%;
    padding-left: 5%;
}


.home-content2-writing {
    width: 65%;
    margin-right: 25%;
}

.home-content2-writing p {
    display: flex;
    justify-content: left;
}



.home-content1-img {
    width: 30%;
    height: 100%
}

h1,
h3 {
    width: 100%;
    text-align: center;
    color: white;
    font-size: 1.5em;
}

h1 {
    color: yellow;
    font-size: 2.5em;
}

h2 {
    color: yellow;
    margin: 0;
}

h2, p {
    font-size: 250%;
}

p {
    color: white;
    width: 100%;
    font-size: 120%;
}

footer {
    display: flex;
    width: 100%;
    background-color:#743B00 ;
    height: auto;
}

footer a {
    color: white;
}

